styles.css
.macro_section {
    display: flex;
    justify-content: space-between;
    align-items: flex-end;
    background-color: rgb(223, 189, 189);
    border-radius: 10px;
    min-height: 400px;
    margin: 10px;
    box-shadow: 10px 10px 16px rgba(0, 0, 0, 0.7), inset -6px -6px 0px rgba(0, 0, 0, 0.342);
}

.macro_section > section {
    display: flex;
    justify-content: space-around;
}

.micro_section {
    background-color: rgb(219, 255, 255);
    border-radius: 10px;
    width: 400px;
    height: 400px;
    margin: 10px;
    box-shadow: 10px 10px 16px rgba(0, 0, 0, 0.7), inset -6px -6px 0px rgba(0, 0, 0, 0.342);
}

.content {
    margin: 15px;
    display: flex;
    height: 75%;
    width: 85%;
}

.space-around {
    justify-content: space-around;
}

.space-between {
    justify-content: space-between;
}

.space-evenly {
    justify-content: space-evenly;
}

.jus-flex-start {
    justify-content: flex-start;
}

.jus-flex-end {
    justify-content: flex-end;
}

.jus-center {
    justify-content: center;
}

.row {
    flex-direction: row;
}

.column {
    flex-direction: column;
    align-items: center;
}

.row-reverse {
    flex-direction: row-reverse;
}

.column-reverse {
    flex-direction: column-reverse;
    align-items: center;
}

.alit-flex-start {
    align-items: flex-start;
}

.alit-flex-end {
    align-items: flex-end;
}

.alit-center {
    align-items: center;
}

.alit-stretch {
    align-items: stretch;
}

.content > div {
    width: 50px;
    height: 50px;
    border-radius: 5px;
}

